--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,58 @@
     <meta name="keywords" content="tomchochola, tomaschochola, Tomas Chochola, Tomáš Chochola, premierstacks, browser-webpack-typescript-react-app-template" />
     <meta name="author" content="Tomáš Chochola <chocholatom1997@gmail.com>" />
 
-    <title>premierstacks/browser-webpack-typescript-react-app-template</title>
+    <meta name="theme-color" content="white" />
 
-    <link rel="icon" type="image/x-icon" sizes="48x48" href="../assets/favicon.ico" />
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../assets/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon-16x16.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="premierstacks/browser-webpack-typescript-react-app-template" />
+
+    <title>premierstacks/browser-webpack-typescript-react-app-template</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="icon" type="image/x-icon" sizes="16x16 32x32 48x48" href="/favicon.ico" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192x192.png" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512x512.png" />
+
+    <!-- webpackIgnore: true -->
+    <link rel="manifest" href="/manifest.webmanifest" />
   </head>
-  <body></body>
+  <body>
+    <script>
+      window.addEventListener('load', () => {
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker
+            .register('/sw.js')
+            .then((registration) => {
+              console.log('Service Worker registered with scope:', registration.scope);
+            })
+            .catch((error) => {
+              console.error('Service Worker registration failed:', error);
+            });
+        }
+      });
+    </script>
+  </body>
 </html>
