--- a/src/index.html
+++ b/src/index.html
@@ -47,20 +47,5 @@
     <!-- webpackIgnore: true -->
     <link rel="manifest" href="/manifest.webmanifest" />
   </head>
-  <body>
-    <script>
-      window.addEventListener('load', () => {
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker
-            .register('/sw.js')
-            .then((registration) => {
-              console.log('Service Worker registered with scope:', registration.scope);
-            })
-            .catch((error) => {
-              console.error('Service Worker registration failed:', error);
-            });
-        }
-      });
-    </script>
-  </body>
+  <body></body>
 </html>
